# secure-llm

./: .gitignore  CMakeLists.txt  accuracy_measure_tools.py  bmm_unittest.py  build_cutlass.sh  cipher.py  cipher_light.py  cipher_unittest.py  cipher_unsecure.py  environment.sh  rand_unittest.py  run_no_sgx.sh  run_script.sh  run_script_bmm_only.sh  run_script_end_to_end.sh  run_sgx.sh  sbr_unittest.py  setup.py  shift_unittest.py  smoothquant_eval.py  smoothquant_generation.py  smoothquant_generation_eos.py
benchmark/: decode_benchmark.py  prefill_benchmark.py
cipher/: cipher.py  cipher_bmm.py  cipher_light.py  cipher_linear.py  cipher_slalom.py  tensor_conversion.py
cipher_cpp/: cipher.cpp  cipher.h  cipher_pybind.cpp
cipher_cuda/: warptile_matmul.cuh  warptile_matmul_bitwise_mod.cuh  warptile_matmul_mod.cuh  warptile_matmul_s8x_s8y_s32z.cuh
examples/: smoothquant_opt_real_int8_demo.ipynb  smoothquant_opt_real_int8_demo.py
secure_llm/: CMakeLists.txt  Makefile  Makefile.no_sgx  cipher_app  secure_llm.cpp  secure_llm.h  secure_llm.py  secure_llm_no_sgx2.py  secure_llm_sgx.cpp  secure_llm_sgx.h  secure_llm_sgx.py
secure_llm/App/: Enclave_u.c  Enclave_u.h  enclave_bridge.cpp
secure_llm/Enclave/: Enclave.config.xml  Enclave.edl  Enclave_t.h
secure_llm/common/: aes_stream.h  dynamic_glob_data.h  tensor.cpp  tensor.h  tools.cpp  tools.h  tools_sgx.cpp  tools_sgx.h
sgx/: Makefile  cipher_app  layer_norm.py  sgx_layer_struct.py
sgx/App/: Enclave_u.c  Enclave_u.h  enclave_bridge.cpp
sgx/Enclave/: Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h  layer.cpp  layer.h  sgx_layer_struct.cpp  sgx_layer_struct.h
sgx/Enclave/c/: layer_struct_c.c  layer_struct_c.h  static_glob_data.h  tensor.c  tensor.h
sgx/Enclave/cpp/: aes_stream.cpp  aes_stream.h  dynamic_glob_data.h  layer_struct_c.cpp  layer_struct_c.h  mod.cpp  mod.h  static_glob_data.h  tensor.cpp  tensor.h
smoothquant/: CMakeLists.txt  layer_struct_c.py  my_bmm.py  my_linear.py  opt.py
smoothquant/c/: aes_stream.c  aes_stream.cpp  aes_stream.h  datatypes.h  dynamic_glob_data.h  layer_struct_c.c  layer_struct_c.cpp  layer_struct_c.h  mod.c  mod.cpp  mod.h  static_glob_data.h  tensor.c  tensor.cpp  tensor.h
smoothquant/cpp/: aes_stream.cpp  aes_stream.h  layer.cpp  layer.h  layer_struct_c.c  layer_struct_c.h
smoothquant/cpp_unittests/: CMakeLists.txt  aes_stream_unittest.cpp
smoothquant/examples/: my_test.py  opt_generation_example.py  smoothquant_opt_real_int8_demo.ipynb  smoothquant_opt_real_int8_demo.py  smoothquant_opt_real_int8_example.py
smoothquant/smoothquant/: fake_quant.py  opt.py
test/: encrypted_matmul_test.py  float_exact_rep_test.py  test.py
tools/: dependency_graph.txt  task_scheduling.py
unittest/: cipher_unittest.py  linear_relu_unittest.py  linear_unittest.py  sbc_unittest.py  sbr_unittest.py  tensor_conversion_unittest.py  undo_shift_unittest.py
